fix classpath issue in build.sh